--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,94 @@
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiohttp_socks==0.9.0
+aiosignal==1.3.1
+annotated-types==0.7.0
+anthropic==0.34.1
+anyio==4.4.0
 asgiref==3.8.1
-Django==5.1
+async-timeout==4.0.3
+attrs==24.2.0
+beautifulsoup4==4.12.3
+black==24.8.0
+blinker==1.8.2
+bottle==0.12.25
+Brotli==1.1.0
+browser-cookie3==0.19.1
+cairocffi==1.7.1
+CairoSVG==2.7.1
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==43.0.0
+cssselect2==0.7.0
+curl_cffi==0.7.1
+defusedxml==0.7.1
+distro==1.9.0
+Django==5.0
 django-cors-headers==4.4.0
+django-jazzmin==2.6.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+duckduckgo_search==6.2.11
+et-xmlfile==1.1.0
+fastapi==0.112.2
+filelock==3.15.4
+Flask==3.0.3
+frozenlist==1.4.1
+fsspec==2024.6.1
+g4f==0.3.2.8
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
+huggingface-hub==0.24.6
+idna==3.8
+itsdangerous==2.2.0
+jeepney==0.8.0
+Jinja2==3.1.4
+jiter==0.5.0
+loguru==0.7.2
+lz4==4.3.3
+MarkupSafe==2.1.5
+multidict==6.0.5
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+numpy==2.1.0
+openai==1.50.2
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.2
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.2.2
+plyer==2.1.0
+primp==0.6.1
+proxy_tools==0.1.0
+pycparser==2.22
+pycryptodome==3.20.0
+pycryptodomex==3.20.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+PyExecJS==1.5.1
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
+python-socks==2.5.1
+pytz==2024.1
+pywebview==5.2
+PyYAML==6.0.2
+requests==2.32.3
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
 sqlparse==0.5.1
+starlette==0.38.2
+tinycss2==1.3.0
+tokenizers==0.20.0
+tqdm==4.66.5
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+uvicorn==0.30.6
+webencodings==0.5.1
+Werkzeug==3.0.4
+yarl==1.9.4
